# c-test-bluez

./: CMakeLists.txt  READMA.md  agent-server.c  agent-server.h  build.sh  test-gdbus.c  toolchain.cmake
gdbus/: CMakeLists.txt  org.bluez.agent1.xml
